5126.	[bug]		Named incorrectly accepted empty base64 and hex encoded
			fields when reading master files. [GL #807]

5125.	[bug]		Allow for up to 100 records or 64k of data when caching
			a negative response. [GL #804]

5124.	[bug]		Named could incorrectly return FORMERR rather than
			SERVFAIL. [GL #804]

5123.	[bug]		dig could hang indefinitely after encountering an error
			before creating a TCP socket. [GL #692]

5122.	[bug]		In a "forward first;" configuration, a forwarder
			timeout did not prevent that forwarder from being
			queried again after falling back to full recursive
			resolution. [GL #315]

5121.	[contrib]	dlz_stub_driver.c fails to return ISC_R_NOTFOUND on none
			matching zone names. [GL !1299]

5120.	[placeholder]

5119.	[placeholder]

5118.	[placeholder]

5117.	[placeholder]

5116.	[bug]		Named/named-checkconf triggered a assertion when
			a mirror zone's name is bad. [GL #778]

5115.	[bug]		Allow unsupported algorithms in zone when not used for
			signing with dnssec-signzone. [GL #783]

5114.	[func]		Include a 'reconfig/reload in progress' status line
			in rndc status, use it in tests.

5113.	[port]		Fixed a Windows build error.

5112.	[bug]		Named/named-checkconf could dump core if there was
			a missing masters clause and a bad notify clause.
			[GL #779]

5111.	[bug]		Occluded DNSKEY records could make it into the
			delegating NSEC/NSEC3 bitmap. [GL #742]

5110.	[placeholder]

5109.	[cleanup]	Remove support for RSAMD5 algorithm. [GL #628]

	--- 9.13.5 released ---

5108.	[bug]		Named could fail to determine bottom of zone when
			removing out of date keys leading to invalid NSEC
			and NSEC3 records being added to the zone. [GL #771]

5107.	[bug]		'host -U' did not work. [GL #769]

5106.	[experimental]	A new "plugin" mechanism has been added to allow
			extension of query processing functionality through
			the use of dynamically loadable libraries. A
			"filter-aaaa.so" plugin has been implemented,